--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -105,6 +105,7 @@
 	.related-resources{
 		margin-top: 0;
 		padding-bottom: 1em;
+		width: 100%;
 	}
 
 	.left-menu ul{
@@ -119,7 +120,9 @@
 		flex-direction: row;
 		padding-bottom: 1em;
 		div{
-			width: 30%;
+			width: 29%;
+			margin-right: 1em;
+			display: flex;
 		}
 	}
 
