--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -3115,6 +3115,27 @@ div.workbench-info-block{
 				}
 			}
 		}
-	}
-	
+	}	
 }
+
+
+.view-id-partners_list{
+
+	.quicktabs-tabpage{
+		display: flex;
+		flex-wrap: wrap;
+	}
+
+	.quicktabs-views-group{
+		.views-field-field-logo{
+			max-width: 100%;
+			text-align: center;
+			display: flex;
+			img{
+				max-width: 150px;
+			}
+		}
+	}
+} 
+	 
+
