--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -135,6 +135,21 @@ select{
 	padding-right: 0;
 }
 
+.panels-flexible-row{
+	h2{
+		font-style: normal;
+		clear: both;
+		padding-bottom: 15px;
+	}
+
+	.profile-col-left-3, .profile-col-right-3{
+		h2{
+			color: #acc700;
+			font-weight: 600;
+		}
+	}
+}
+
 .section-introduction p{
 	font-size: 1em;
 }
@@ -3216,4 +3231,228 @@ div.workbench-info-block{
 
 .view-id-partners_list .hwc-char-link, .view-id-partners_list .quicktabs-tabs li, .view-id-partners_list div[id*="hwc-char-"]{
 	font-weight: bold;
+}
+
+/* National Focal Points detail  */
+
+
+.profile-2-cols-container-1 {
+    padding-top: 0.5em;
+    width: 55%;
+    float: left;
+}
+
+.profile-4-cols-container-2{
+	width: 45%;
+    float: right;
+}
+
+.panels-flexible-column-first .pane-node-field-mission-statement{
+	background: url('../images/background-fop.png') no-repeat;
+	background-size: cover;
+	margin-top: 1em;
+	border-radius: 15px;
+	margin-bottom: 1em;
+	.pane-title{
+		color: #FFF;
+	    font-size: 1.4em;
+	    padding-left: 15px;
+	    padding-top: 15px;
+	    font-style: normal;
+	}
+
+	.pane-content{
+		padding: 1em;
+		padding-left: 1em;
+		padding-right: 1em;
+		font-style: italic;
+		color: #FFF;
+	}
+}
+
+.panels-flexible-row{
+	.hwc-share-widget{
+		float: right;
+	}
+	.date-display-single{
+		display: block;
+	}
+	.field-name-field-country{
+		color: #acc700;
+		font-size: 1.7em;
+	}
+}
+
+.panels-flexible-column-inside-first{
+	.panels-flexible-region-first{
+		float:left;
+		padding-right: 1em;
+	}
+	.profile-col-left-middle-2{
+		float:left;
+	}
+}
+
+.panels-flexible-region{
+	.view-partner-content{
+		.views-row{
+			padding: 0;
+		}
+	}
+
+	.field-name-field-abbreviation-name, .field-name-field-orgtype, .pane-node-field-bussines-sector{
+		font-weight: bold;
+	}
+
+	.field-name-field-orgtype, .pane-node-field-bussines-sector{
+		padding-top: 10px;
+	}
+
+	.pane-custom p{
+		color: #003399;
+		font-weight: bold;
+		font-size: 1.2em;
+		padding-top: 1em;
+		padding-bottom: 10px;
+	}
+
+	.pane-node-field-ph-address{
+		padding-top: 1em;
+	}
+
+	a{
+		font-style: italic;
+		font-weight: 600;
+	}
+
+	.pane-node-field-general-phone{
+		padding-top: 10px;
+		.pane-title{
+			color: #333;
+			font-size: 1em;
+			float: left;
+			padding-right: 5px;
+		}
+	}
+}
+
+.profile-2-cols-container-3{
+	padding-bottom: 2em;
+}
+
+.panels-flexible-column-last{
+	 padding-left: 2em !important;
+
+	.pane-title{
+		float: none;
+		color: #003399;
+		font-weight: bold;
+		font-size: 1.5em;
+		padding-bottom: 10px;
+	}
+
+	.field-name-title-field{
+		font-weight:bold;
+	}
+
+	.pane-node-field-country{
+		padding-top: 1em;
+	}
+
+	.field-name-field-website{
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+}
+
+
+.node-type-partner{
+	[class*="field-type-link"]{
+			font-weight: bold;
+			text-align: left;
+			&[class*="facebook"]{
+				background: url("../images/content/facebook.png") no-repeat left center;
+				padding-left: 50px;
+				margin-bottom: 1em;
+				white-space: nowrap;
+				.field-item{ 
+				    width: 280px; 
+				    overflow: hidden;
+				    text-overflow: ellipsis;
+				    white-space: nowrap;
+				}
+			}
+			&[class*="twitter"]{
+				background: url("../images/content/twitter.png") no-repeat left center;
+				padding-left: 50px;
+				margin-bottom: 1em;
+				.field-item{ 
+				    width: 280px; 
+				    overflow: hidden;
+				    text-overflow: ellipsis;
+				    white-space: nowrap;
+				}
+			}
+			&[class*="slideshare"]{
+				background: url("../images/content/slideshare.png") no-repeat left center;
+				padding-left: 50px;
+				margin-bottom: 1em;
+				.field-item{ 
+				    width: 280px; 
+				    overflow: hidden;
+				    text-overflow: ellipsis;
+				    white-space: nowrap;
+				}
+			}
+			&[class*="youtube"]{
+				background: url("../images/content/youtube.png") no-repeat left center;
+				padding-left: 50px;
+				margin-bottom: 1em;
+				.field-item{ 
+				    width: 280px; 
+				    overflow: hidden;
+				    text-overflow: ellipsis;
+				    white-space: nowrap;
+				}
+			}
+			&[class*="linkedin"]{
+				background: url("../images/content/linkedin.png") no-repeat left center;
+				padding-left: 50px;
+				margin-bottom: 1em;
+				.field-item{ 
+				    width: 280px; 
+				    overflow: hidden;
+				    text-overflow: ellipsis;
+				    white-space: nowrap; 
+				}
+			}
+			&[class*="google-plus"]{
+				background: url("../images/content/googleplus.png") no-repeat left center;
+				padding-left: 50px;
+				margin-bottom: 1em;
+				.field-item{ 
+				    width: 280px; 
+				    overflow: hidden;
+				    text-overflow: ellipsis;
+				    white-space: nowrap; 
+				}
+			}
+			&[class*="pinterest"]{
+				background: url("../images/content/pinterest.png") no-repeat left center;
+				padding-left: 50px;
+				margin-bottom: 1em;
+				.field-item{ 
+				    width: 280px; 
+				    overflow: hidden;
+				    text-overflow: ellipsis;
+				    white-space: nowrap; 
+				}
+			}
+			a{
+				&:before{
+					content: "";
+					padding-right: 0;
+				}
+			}
+		}
 }
